samples/_failures_safe/1761703868_161d58_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fcab8a3.c: In function ‘filter_by_level’:
./samples/SAFE/__tmp_7fcab8a3.c:130:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  130 |     for (int i
      |     ^~~
./samples/SAFE/__tmp_7fcab8a3.c:130:5: error: expected declaration or statement at end of input
